@@ -2,7 +2,8 @@
 v4.0.0 2025-01-??
      * Plugins needs updating (include paths, and add usage of
        registerPluginTestFunction). NCRYSTAL_PLUGIN_RUNTESTS=1 and
-       NCRYSTAL_PLUGIN_RUNTESTS (fixme).
+       NCRYSTAL_PLUGIN_RUNTESTS (fixme). NB: NCRYSTAL_PLUGIN_LIST now accepts
+       .SODYLIB as cross-platform alias for .so/.dylib/.dll
      * Removed several long-obsolete CMake options. Also removed any options
        related to python code, since those are now installed without cmake.
      * Removed SOVERSION from produced libraries (due to github issue #186).
